<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MusicFragment">

    <TextView
        android:id="@+id/textViewNP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:text="@string/np" />

    <TextView
        android:id="@+id/textViewMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="24dp"
        >

        <TextView
            android:id="@+id/textViewTArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/artist" />

        <TextView
            android:id="@+id/textViewArtist"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/textViewTAlbum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/album" />

        <TextView
            android:id="@+id/textViewAlbum"
            android:layout_width="0dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_weight="3"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/textViewTFav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/fav" />

        <CheckBox
            android:id="@+id/checkBoxFav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
             />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        >

        <ImageView
            android:id="@+id/imageViewCover"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_launcher_foreground" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonListen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listen"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/buttonDeezer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gotodeezer"
            android:layout_margin="10dp"/>
    </LinearLayout>
</LinearLayout>